--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,10 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -15,6 +18,7 @@
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "@types/flexsearch": "^0.7.0"
+    "@types/flexsearch": "^0.7.0",
+    "bun-types": "latest"
   }
 }
