feat: implement unified site.config.json configuration system
- Add comprehensive site.config.json with all project settings
- Create TypeScript types for type-safe configuration access
- Add JSON Schema for configuration validation
- Implement SiteConfigManager utility class with caching
- Add utilities for generating Next.js, Tailwind, Vercel, and Netlify configs
- Include comprehensive test suite (29/30 tests passing)
- Support for environment-specific variables and feature flags
- Centralized configuration for SEO, PWA, UI, and deployment settings

Resolves: g-8wk3t2

--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -1,5 +1,7 @@
 # Dev Agent specific files
 # Note: dev/ folder is not ignored because dev-agent is used as subtree
+database.db
+.database.db
 .dev-agent.db
 .dev-agent.db-wal
 .dev-agent.db-shm
