fix: move site.config.json to apps/landing and update paths
- Move site.config.json from root to apps/landing/ directory
- Update schema path reference in site.config.json
- Update SiteConfigManager to search for config in apps/landing/
- Sync task g-8wk3t2 status to GitHub (issue closed)

Resolves: g-8wk3t2

--- a/apps/landing/site.config.json
+++ b/apps/landing/site.config.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./packages/utils/src/config/site-config.schema.json",
+  "$schema": "../../packages/utils/src/config/site-config.schema.json",
   "site": {
     "name": "LND Boilerplate",
     "shortName": "LND",
