feat: implement Documentation Template (DocsLayout)
- Add DocumentationConfig interface to site-config.types.ts
- Create DocsLayout component with configurable features:
  - Navigation sidebar (configurable position)
  - Built-in search functionality
  - Breadcrumb navigation
  - Reading progress indicator
  - Table of contents
  - Mobile-responsive design
- Add comprehensive example and demo page
- Update template exports and documentation
- Configure documentation features in site.config.json
- All features configurable through site.config.json

Resolves: g-8xu3t2

--- a/apps/landing/site.config.json
+++ b/apps/landing/site.config.json
@@ -311,6 +311,26 @@
       "enabled": true,
       "offlineSupport": true,
       "installPrompt": true
+    },
+    "documentation": {
+      "enabled": true,
+      "path": "/docs",
+      "navigation": {
+        "enabled": true,
+        "position": "left",
+        "showProgress": true,
+        "showBreadcrumbs": true
+      },
+      "search": {
+        "enabled": true,
+        "provider": "local",
+        "placeholder": "Search documentation..."
+      },
+      "layout": {
+        "sidebar": true,
+        "toc": true,
+        "footer": true
+      }
     }
   },
   "environment": {
